fix(bug): Fixed the issue with the height for the shopping cart page and also fixed the logo img not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.custom-height{
+  min-height: 70vh;
+}
+
 /* ----- NAV BAR ----- */
 .nav-bar {
     background-color: #34A0A4;
